blog heart-animation

--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,96 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;600;700;800;900;1000&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;600;700;800;900;1000&display=swap");
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 html {
-    scroll-behavior: smooth;
+  scroll-behavior: smooth;
+}
+::-webkit-scrollbar {
+  display: none;
+}
+
+.fav {
+  position: relative;
+  
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+
+.fav svg {
+  transform-origin: center center;
+  transition: all .15s ease-out;
+  
+  width: 25px;
+  height: 25px;
+}
+
+.fav #heartPath {
+  fill: inherit;
+  stroke: inherit;
+  stroke-width: inherit;
+  transform: inherit;
+}
+
+.fav.favPress svg {
+  transform: scale(0.8);
+}
+
+.floatHeart {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.stableHeart {
+  stroke: #909EB2;
+  fill: none;
+}
+
+.favd .stableHeart {
+  stroke: #60A5FA;
+  fill: #60A5FA;
+  opacity: 1;
+}
+
+.fav:not(.favd):hover .stableHeart {
+  stroke: #60A5FA;
+  opacity: 0.75;
+}
+
+.fav.favPress .stableHeart {
+  opacity: 1;
+}
+
+.floatHeart {
+  fill: none;
+  
+  opacity: 0;
+}
+
+.fav:hover .floatHeart {
+  stroke: #60A5FA;
+  fill: #60A5FA;
+}
+
+.fav.favd .floatHeart {
+  animation-duration: 800ms;
+  animation-name: poof;
+}
+
+@keyframes poof {
+  from {
+    top: 0;
+    opacity: 0.6;
   }
-  ::-webkit-scrollbar {
-    display: none;
+  
+  to {
+    top: -150%;
+    opacity: 0;
+  }
 }
