--- a/src/index.css
+++ b/src/index.css
@@ -94,3 +94,18 @@ html {
     opacity: 0;
   }
 }
+
+.animate-button {
+  transition: transform 0.3s ease-in-out;
+}
+
+.animate-svg {
+  transition: fill 0.3s ease-in-out;
+}
+
+.no-seleccionable {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none; 
+}
